# yphost

./: .gitignore  CMakeLists.txt  README.md  car.cpp  car.h  hkimage.cpp  hkimage.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  protocol.txt  yphost.pro  yuv2rgb.cpp  yuv2rgb.h
mec_dev/: CMakeLists.txt  cam.cpp  cam.h
mec_dev/uart/: CMakeLists.txt  main.cpp  uart_op.cpp  uart_op.h
misc/: CMakeLists.txt  img_get.cpp
yp/img_detect/: CMakeLists.txt  img_rev.cpp
yp/mec_dev/: CMakeLists.txt  cam.cpp  cam.h
yp/mec_dev/slc-arm64/: LFLAGS
yp/slc/: CMakeLists.txt
yp/slc/example/: slc_test.c
yp/slc/src/: common.h  slc.c  slc.h  tcp_create_socket.c  tcp_create_socket.h  tcp_thread.c  tcp_thread.h  udp_create_socket.c  udp_create_socket.h  udp_mult_thread.c  udp_mult_thread.h  udp_multicast.c  udp_multicast.h  udp_thread.c  udp_thread.h
